--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,67 @@
-.App {
+.game{
   width: 1200px;
-  height: 600px;
-  border: 2px solid black;
+  height: 400px;
+  border: 1px solid black;
   margin: auto;
+}
+#dino{
+	width: 30px;
+	height: 30px;
+	/* background-image: url(dino.png); */
+	background-size: 30px 30px;
+	position: relative;
+	top: 310px;
+	left: 20px;
+}
+.jump{
+	animation:jump 0.3s linear;
+}
+@keyframes jump{
+	0%{
+		top: 150px;
+	}
+	30%{
+		top: 130px;
+	}
+	50%{
+		top: 80px;
+	}
+	80%{
+		top: 130px;
+	}
+	100%{
+		top: 150px;
+	}
+}
+#cactus{
+	width: 35px;
+	height: 35px;
+	position: relative;
+	top: 300px;
+	left: 580px;
+
+	/* background-image: url(block.png); */
+	background-size: 35px 35px;
+
+	animation: block 1.5s infinite linear;
+}
+@keyframes block{
+	0%{
+		left: 560px;
+	}
+	100%{
+		left: 0px;
+	}
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  width: 50px;
+	height: 50px;
+  background-size: 50px 50px;
+	position: relative;
+	top: 150px;
+	left: 50px;
+  /* pointer-events: none; */
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -37,4 +91,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.button{
+	background-color: blue;
+	text-align: center;
 }
