--- a/src/App.css
+++ b/src/App.css
@@ -17,24 +17,25 @@
 }
 @keyframes jump{
 	0%{
-		top: 150px;
+		top: 310px;
 	}
 	30%{
-		top: 130px;
+		top: 250px;
 	}
 	50%{
-		top: 80px;
+		top: 150px;
 	}
 	80%{
-		top: 130px;
+		top: 250px;
 	}
 	100%{
-		top: 150px;
+		top: 310px;
 	}
 }
 #cactus{
 	position: relative;
 	top: 300px;
+	left: 1000px;
 	animation: block 3s infinite linear;
 }
 @keyframes block{
